circleci config added in main branch

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,6 +48,7 @@ workflows:
             branches:
               only:
                 - circleci-project-setup
+                - main
       - deploy:
           requires:
             - build
@@ -55,3 +56,4 @@ workflows:
             branches:
               only:
                 - circleci-project-setup
+                - main
