--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,7 +37,7 @@ jobs:
       - run:
           name: Deploy
           command: |
-            if [ $CIRCLE_BRANCH = 'circleci-project-setup' ]; then
+            if [ $CIRCLE_BRANCH = 'main' ]; then
               aws s3 sync build s3://ci-cd-s3-example --delete --exact-timestamps;
             fi
 workflows:
