--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,7 @@ jobs:
       - run:
           name: Build
           command: |
-            if [ $CIRCLE_BRANCH = 'circleci-project-setup' ]; then
+            if [ $CIRCLE_BRANCH = 'main' ]; then
               npm run build
             fi
       - persist_to_workspace:
@@ -43,7 +43,7 @@ jobs:
       - run:
           name: Deploy
           command: |
-            if [ $CIRCLE_BRANCH = 'circleci-project-setup' ]; then
+            if [ $CIRCLE_BRANCH = 'main' ]; then
               aws s3 sync build s3://ci-cd-s3-example --delete --exact-timestamps;
             fi
 workflows:
@@ -53,7 +53,6 @@ workflows:
           filters:
             branches:
               only:
-                - circleci-project-setup
                 - main
       - deploy:
           requires:
@@ -61,5 +60,4 @@ workflows:
           filters:
             branches:
               only:
-                - circleci-project-setup
                 - main
